feat: migrate from prisma to drizzle orm and restructure project
- Replace Prisma ORM with Drizzle ORM for type-safe database queries
- Migrate database from MySQL to PostgreSQL with connection pooling
- Add drizzle.config.ts and database schema configuration
- Switch package manager from pnpm to bun with bun.lock
- Implement comprehensive authentication module with JWT and API key guards
- Add user, API key, and social account repositories
- Create health check module with ping and status endpoints
- Implement OpenTelemetry integration for distributed tracing
- Add RabbitMQ resilient service with automatic reconnection
- Add Redis service for caching and session management
- Implement Hono Swagger UI for interactive API documentation
- Add swagger controller and auto-generation script
- Update logging and response interceptors with structured logging
- Create standardized API response interface
- Add comprehensive documentation (FEATURES.md, OBSERVABILITY.md, QUICKSTART.md)
- Update environment variables with new database and service configurations
- Remove Prisma-related files and generated types
- Restructure shared modules with database, redis, and rabbitmq services
- Update .gitignore to exclude drizzle migrations directory

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NODE_ENV=development
+PORT=3000
+
 APP_NAME=NEST_BOILERPLATE
 APP_DEFAULT_LANG=en
 APP_TIMEZONE="+07:00"
@@ -11,9 +13,10 @@ API_URL=
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=
 DB_DATABASE_NAME=boilerplate
 DB_CONNECTION_LIMIT=100
+DATABASE_URL=postgres://postgres:@localhost:5432/boilerplate
 
 # AWS S3
 AWS_S3_ACCESS_KEY_ID=
@@ -53,9 +56,18 @@ RATE_LIMIT_MAX=500
 
 JEST_SAVE_DATA=false
 
+# OpenTelemetry
+OTEL_ENABLED=false
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
+
 # AUTH JWT
 JWT_SECRET=
 JWT_EXPIRY="356"
 
 HTTP_TIMEOUT=30000
 HTTP_MAX_REDIRECTS=5
+
+# RabbitMQ
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+RABBITMQ_EXCHANGE=
+RABBITMQ_QUEUE=
