--- a/package.json
+++ b/package.json
@@ -8,81 +8,93 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "bun run dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "bun run dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "swagger:generate": "ts-node -r tsconfig-paths/register scripts/generate-swagger.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "prepare": "husky"
   },
   "dependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@hono/swagger-ui": "^0.5.2",
+    "@kiyasov/platform-hono": "^1.5.6",
     "@medibloc/nestjs-request-context": "^1.0.1",
-    "@nestjs/axios": "^3.1.1",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/axios": "^3.1.3",
+    "@nestjs/common": "^10.4.20",
+    "@nestjs/core": "^10.4.20",
     "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/microservices": "^10.4.6",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/schedule": "^4.1.1",
-    "@nestjs/swagger": "^8.0.1",
-    "@nestjs/terminus": "^10.2.3",
-    "@nestjs/throttler": "^6.2.1",
-    "@prisma/client": "^5.21.1",
-    "@trpc/server": "^10.45.2",
+    "@nestjs/microservices": "^10.4.20",
+    "@nestjs/schedule": "^4.1.2",
+    "@nestjs/swagger": "^8.1.1",
+    "@nestjs/terminus": "^10.3.0",
+    "@nestjs/throttler": "^6.4.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.2",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "@types/bcrypt": "^5.0.2",
-    "amqp-connection-manager": "^4.1.14",
-    "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "csrf-csrf": "^3.0.8",
+    "class-validator": "^0.14.3",
+    "csrf-csrf": "^3.2.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "dotenv": "^16.4.5",
-    "helmet": "^8.0.0",
-    "husky": "^9.1.6",
-    "ioredis": "^5.4.1",
-    "nestjs-pino": "^4.1.0",
-    "nestjs-trpc": "^1.6.1",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.44.7",
+    "hono": "^4.10.7",
+    "husky": "^9.1.7",
+    "ioredis": "^5.8.2",
+    "nestjs-pino": "^4.5.0",
+    "nestjs-resilience": "^3.1.2",
+    "pg": "^8.16.3",
     "pino-pretty": "^11.3.0",
-    "prisma": "^5.21.1",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "trpc-panel": "^1.3.4",
-    "winston": "^3.16.0",
+    "postgres": "^3.4.7",
+    "rabbitmq-client": "^5.0.7",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.20",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.19.25",
+    "@types/pg": "^8.15.6",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "drizzle-kit": "^0.31.7",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^29.7.0",
+    "prettier": "^3.7.3",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
+    "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
